--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
   --color-border: var(--border);
   --color-input: var(--input);
   --color-bubble: var(--bubble);
+	--color-bubble-100: var(--bubble-100);
   --color-date: var(--date);
   --color-ring: var(--ring);
   --color-chart-1: var(--chart-1);
@@ -66,6 +67,7 @@
   --border: oklch(0.929 0.013 255.508);
   --input: oklch(0.929 0.013 255.508);
   --bubble: oklch(72.849% 0.14264 255.967);
+	--bubble-100: oklch(90.239% 0.00265 230.289);
   --date: oklch(60.108% 0.0085 207.531);
   --ring: oklch(0.704 0.04 256.788);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -104,6 +106,7 @@
   --ring: oklch(0.551 0.027 264.364);
   --date: oklch(90.365% 0.0001 271.152);
   --bubble: oklch(51.519% 0.18016 258.107);
+	--bubble-100: oklch(42.018% 0.00871 268.468);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
